Improved fixes for IE11, Safari. Webpage now stretches properly - footer will stick to bottom of window unless content exceeds vertical size of window - at which point, footer will stick to the bottom of the page instead. Mind the garish colours - we're still in debug mode and in the process of converting the code into a more 'cleaned up' form.

--- a/src/styles/components/app-container.styl
+++ b/src/styles/components/app-container.styl
@@ -2,4 +2,4 @@
   > div
     display flex
     flex-direction column
-    min-height: 100vh
+    min-height 100%
